Fix z-index on modals to not be hidden by live preview

--- a/cp-styles/app/styles/components/_live-preview.scss
+++ b/cp-styles/app/styles/components/_live-preview.scss
@@ -11,6 +11,10 @@ $ease: cubic-bezier(0.165, 0.84, 0.44, 1);
 	z-index: 250;
 	max-width: 100vw;
 	display: none;
+
+    ~ .modal-wrap {
+        z-index: 251;
+    }
 }
 
 .live-preview {
